# advent-of-code-2020

./: Cargo.toml  README.md  index.html  search-index.js  settings.html  source-files.js
.cargo/: config
ansi_term/: all.html  enum.Color.html  enum.Colour.html  fn.ANSIByteStrings.html  fn.ANSIStrings.html  index.html  struct.ANSIGenericString.html  struct.ANSIGenericStrings.html  struct.Infix.html  struct.Prefix.html  struct.Style.html  struct.Suffix.html  type.ANSIByteString.html  type.ANSIByteStrings.html  type.ANSIString.html  type.ANSIStrings.html
anyhow/: all.html  index.html  macro.anyhow.html  macro.bail.html  macro.ensure.html  struct.Chain.html  struct.Error.html  trait.Context.html  type.Result.html
aoc_challenges/: all.html  fn.all_challenges.html  index.html  sidebar-items.js
aoc_cli/: all.html  enum.Command.html  fn.list_challenges.html  fn.main.html  fn.run_challenge.html  index.html  sidebar-items.js
aoc_core/: all.html  fn.all_challenges.html  index.html  sidebar-items.js  struct.Challenge.html  struct.Example.html  struct.GroupedLines.html  struct.Lines.html
aoc_macros/: all.html  attr.challenge.html  index.html  sidebar-items.js
atty/: all.html  enum.Stream.html  fn.is.html  fn.isnt.html  index.html
bitvec/: all.html  index.html  macro.bitarr.html  macro.bitbox.html  macro.bits.html  macro.bitvec.html
challenges/: Cargo.toml
challenges/src/: day_1.rs  day_2.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  lib.rs  main.rs
clap/: all.html  enum.Shell.html  (+25 more)
cli/: Cargo.toml
cli/src/: main.rs
macros/: Cargo.toml
macros/src/: lib.rs
(+1029 files in other folders)
