[package]
name = "aoc-cli"
version = "0.1.0"
authors = ["Michael-F-Bryan <michaelfbryan@gmail.com>"]
edition = "2018"
description = "Explore all challenge implementations for the 2020 Advent of Code event."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.35"
aoc-challenges = {path = "../challenges"}
structopt = "0.3.21"

