[package]
name = "aoc-macros"
version = "0.1.0"
authors = ["Michael-F-Bryan <michaelfbryan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
once_cell = "1.5.2"
proc-macro2 = "1.0.24"
pulldown-cmark = "0.8.0"
quote = "1.0.7"
regex = "1.4.2"
syn = { version = "1.0.54", features = ["full"] }
